@@ -1,3 +1,11 @@
+2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
+	* Changed a double value in app.cpp to t_value (int) to get rid of
+	  the compiler warning.
+	* Changed newdevice.cpp so that if the user has not touched the
+	  name field, it will be filled with the device model. If the user
+	  types something, the name is not replaced, unless length == 0.
+	* Removed libs/usbdmxout/Makefile.in because it is autogenerated.
+
 2006-Mar-05  Stefan Krumm <stefankrumm@users.sf.net>
 	* Added a "stop all running functions feature" to the virtual console
 	  buttons.
